--- a/src/main/resources/templates/user-edit.html
+++ b/src/main/resources/templates/user-edit.html
@@ -7,6 +7,10 @@
 <header th:replace="fragments/commons::nav"></header>
 <main role="main " class="bg-dark">
 
+    <h5 th:if="${itIsYourself} == true" class="mt-5 text-center">
+        <strong class="bg-blur rounded text-danger">
+            Не можеш да редактираш ролите си сам! </strong>
+    </h5>
 
     <div class="container bg-dark rounded p-0 mt-5 w-75">
         <form
@@ -16,19 +20,26 @@
                 class=" text-center text-light">
 
             <div class="form-group row text-info">
-                <label for="username" class="col-sm-2 col-form-label">Потребителско име</label>
+                <label for="username" class="col-sm-2 col-form-label">Регистрирани потребители</label>
                 <div class="col-sm-10">
-                    <input
+                    <select
                             th:field="*{username}"
                             th:errorclass="is-invalid"
-                            type="text" class="form-control" id="username"
-                            aria-describedby="nameHelpInline" placeholder="Потребителско име">
+                            id="username" name="waterTemp" class="custom-select"
+                            aria-describedby="categoryHelpInline">
+                        <option value="" selected>Регистрирани потребители</option>
+                        <option
+                                th:each="au:${allUsernames}"
+                                th:value="${au}"
+                                th:text="${au}"
+                                value="">T
+                        </option>
+                    </select>
                     <small id="usernameHelpInline" class="invalid-feedback bg-danger text-light rounded">
-                        Дължината на потреботелското име е между 5 и 10 символа.
+                        Избери потребител.
                     </small>
                 </div>
             </div>
-
 
             <div class="form-group row text-info">
                 <label for="user_role" class="col-sm-2 col-form-label">Роля</label>
@@ -52,7 +63,8 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-dark text-info bg-dark w-20 mb-5 border border-info">РЕДАКТИРАЙ</button>
+            <button type="submit" class="btn btn-dark text-info bg-dark w-20 mb-5 border border-info">РЕДАКТИРАЙ
+            </button>
 
         </form>
 
