--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,35 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/commons::head"></head>
-<body class="bg-dark">
+<body class="bg-dark" onload="startTime()">
 <div class="wrapper">
+
     <header th:replace="fragments/commons::nav"></header>
+
+    <h4>
+        <div class="text-white" id="txt"></div>
+        <script>
+            function startTime() {
+                const today = new Date();
+                let h = today.getHours();
+                let m = today.getMinutes();
+                let s = today.getSeconds();
+                m = checkTime(m);
+                s = checkTime(s);
+                document.getElementById('txt').innerHTML = h + ":" + m + ":" + s;
+                setTimeout(startTime, 1000);
+            }
+
+            function checkTime(i) {
+                if (i < 10) {
+                    i = "0" + i
+                }
+                ;  // add zero in front of numbers < 10
+                return i;
+            }
+        </script>
+    </h4>
+
     <section class="top-container">
         <a th:fragment="welcome" class="site-header text-warning mb-0">
             <h4 sec:authorize="!isAuthenticated()">ДОБРЕ ДОШЪЛ В ХИДРОКАЛКУЛАТОР!</h4>
@@ -33,5 +59,6 @@
     </section>
 </div>
 <footer th:replace="fragments/commons::footer"></footer>
+
 </body>
 </html>
