--- a/src/main/resources/templates/users-logout-page.html
+++ b/src/main/resources/templates/users-logout-page.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/commons::head"></head>
 <body class="bg-dark">
-<header th:replace="fragments/commons::nav"></header>
+<!--<header th:replace="fragments/commons::nav"></header>-->
 
 <main class="p-5 align-content-center bg-dark my-register-div text-warning ">
     <h4 sec:authorize="isAuthenticated()">
